--- a/SRC/Analysis1.ipynb
+++ b/SRC/Analysis1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/romacoffin/Desktop/DATA 1030/data1030_student_f20/Health-Insurance-Cross-Sell-Prediction\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Everytime you run this you will have to restart the Kernal otherwise it will go back too far \n",
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +189,13 @@
        "4         0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('train.csv')\n",
+    "df = pd.read_csv('data/train.csv')\n",
     "df.head()"
    ]
   },
@@ -675,12 +693,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Graphs Used in Summary"
+    "## 5. Graphs Used in Summary or Referenced"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +712,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -702,6 +729,8 @@
     "plt.xlabel('Region Code', fontname=\"Arial\", fontsize=12)\n",
     "plt.ylabel('Policy Sales Channel', fontname=\"Arial\", fontsize=12)\n",
     "plt.show()\n",
+    "\n",
+    "plt.savefig('Figures/Relation_of_Region_with_Sales_Channel.png', dpi=300, format='png')\n",
     "#Seeing what Policy_Sales_Channel and Region_Code can tell us\n",
     "#Hoping both feautures can show if certain locations have better sales with certain distribution channels\n",
     "#Region 28 shows something interesting"
@@ -709,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -723,6 +752,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -731,12 +769,13 @@
     "plt.ylabel('Annual Premium', fontname=\"Arial\", fontsize=12)\n",
     "plt.xlabel('Region Code', fontname=\"Arial\", fontsize=12)\n",
     "plt.show()\n",
+    "plt.savefig('Figures/Relation_of_Region_with_Premium.png', dpi=300, format='png')\n",
     "#continuing from point above, see region 28 with high premium "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,6 +789,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -758,12 +806,13 @@
     "plt.ylabel('Annual Premium', fontname=\"Arial\", fontsize=12)\n",
     "plt.xlabel('Policy Sales Channel', fontname=\"Arial\", fontsize=12)\n",
     "plt.show()\n",
+    "plt.savefig('Figures/Relation_of_Policy_Sales_Channel_with_Premium.png', dpi=300, format='png')\n",
     "#continuing from point above, see policy sales channel ~28, ~125, and ~150 with high premium "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -776,6 +825,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -794,13 +852,14 @@
     "plt.ylabel('counts', fontname=\"Arial\", fontsize=12)\n",
     "plt.xlabel('Age', fontname=\"Arial\", fontsize=12)\n",
     "plt.show()\n",
+    "plt.savefig('Figures/Relation_of_Response_with_Age.png', dpi=300, format='png')\n",
     "#Here we can see that, people ages between 39 to 50 are most likely to Response\n",
     "#People ages between 20 to 30 are most likely to Not Response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -838,6 +897,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -847,6 +915,7 @@
     "plt.legend(loc=4)\n",
     "plt.title('Relation of Response with Vehicle Damage', fontname=\"Arial\", fontsize=14)\n",
     "plt.show()\n",
+    "plt.savefig('Figures/Relation_of_Response_with_Vehicle_Damage.png', dpi=300, format='png')\n",
     "#People with past vehicle damage are more likely to be interested in purchasing vehicle insurance \n",
     "##People with no past vehicle damage are less likely to be interested in purchasing vehicle insurance "
    ]
